changes to html

--- a/index.html
+++ b/index.html
@@ -7,21 +7,57 @@
     <!-- our website begins here -->
     <!-- container starts here -->
     <div class="container">
-      <div class="nav"></div>
-      <div class="slider"></div>
+      <div class="nav">
+        <div class="logo">
+          <a href="">
+            <img src="" alt="" />
+          </a>
+        </div>
+        <div class="menu">
+          <ul>
+            <li>
+              <a href="">Home</a>
+            </li>
+            <li>
+              <a href="">About Us</a>
+            </li>
+            <li>
+              <a href="">Products</a>
+            </li>
+            <li>
+              <a href="">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="slider">
+        <img src="" alt="" />
+      </div>
       <!-- info-wrapper starts here -->
       <div class="info-wrapper">
-        <div class="info-box"></div>
-        <div class="info-box"></div>
-        <div class="info-box"></div>
+        <div class="info-box">
+          <h3></h3>
+          <p></p>
+        </div>
+        <div class="info-box">
+          <h3></h3>
+          <p></p>
+        </div>
+        <div class="info-box">
+          <h3></h3>
+          <p></p>
+        </div>
       </div>
       <!-- info wrapper ends here -->
       <div class="content">
         <!-- this text should be replaced in future -->
+        <h3></h3>
         <p>This is some text</p>
       </div>
     </div>
     <!-- container ends here -->
-    <div class="footer"></div>
+    <div class="footer">
+      &copy; Gokhale Bandhu Bakarwadi, All rights reserved.
+    </div>
   </body>
 </html>
