html and css changes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Gokhale Bandhu Bakarwadi</title>
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- our website begins here -->
@@ -10,7 +11,7 @@
       <div class="nav">
         <div class="logo">
           <a href="">
-            <img src="" alt="" />
+            <img src="images/logo.png" alt="" />
           </a>
         </div>
         <div class="menu">
@@ -31,7 +32,7 @@
         </div>
       </div>
       <div class="slider">
-        <img src="" alt="" />
+        <img src="images/banner_image_1.jpg" alt="" />
       </div>
       <!-- info-wrapper starts here -->
       <div class="info-wrapper">
