--- a/index.html
+++ b/index.html
@@ -37,23 +37,45 @@
       <!-- info-wrapper starts here -->
       <div class="info-wrapper">
         <div class="info-box">
-          <h3></h3>
-          <p></p>
+          <h3>Quality</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+            convallis euismod massa in lobortis. Nullam tincidunt tristique
+            varius. Aliquam sodales odio eget risus ultricies, vitae egestas
+            orci auctor.
+          </p>
+        </div>
+        <div class="info-box middle">
+          <h3>Tradition</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+            convallis euismod massa in lobortis. Nullam tincidunt tristique
+            varius. Aliquam sodales odio eget risus ultricies, vitae egestas
+            orci auctor.
+          </p>
         </div>
         <div class="info-box">
-          <h3></h3>
-          <p></p>
-        </div>
-        <div class="info-box">
-          <h3></h3>
-          <p></p>
+          <h3>Taste</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+            convallis euismod massa in lobortis. Nullam tincidunt tristique
+            varius. Aliquam sodales odio eget risus ultricies, vitae egestas
+            orci auctor.
+          </p>
         </div>
       </div>
       <!-- info wrapper ends here -->
       <div class="content">
         <!-- this text should be replaced in future -->
-        <h3></h3>
-        <p>This is some text</p>
+        <h3>About our tradition</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+          convallis euismod massa in lobortis. Nullam tincidunt tristique
+          varius. Aliquam sodales odio eget risus ultricies, vitae egestas orci
+          auctor. Integer in massa nec quam dapibus facilisis. Suspendisse nec
+          tortor sed justo cursus pellentesque eget at diam. Sed nec pharetra
+          mi, vitae porta augue.
+        </p>
       </div>
     </div>
     <!-- container ends here -->
